// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface wp-components-surface css-2anhki"
+   class="components-surface wp-components-surface css-9yhif5"
    data-g2-c16t="true"
    data-g2-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderLeft 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface wp-components-surface css-17q8f3e"
+   class="components-surface wp-components-surface css-9yhif5"
    data-g2-c16t="true"
    data-g2-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderRight 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface wp-components-surface css-187zti8"
+   class="components-surface wp-components-surface css-9yhif5"
    data-g2-c16t="true"
    data-g2-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderTop 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface wp-components-surface css-evf9lw"
+   class="components-surface wp-components-surface css-9yhif5"
    data-g2-c16t="true"
    data-g2-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borders 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface wp-components-surface css-19tpeum"
+   class="components-surface wp-components-surface css-9yhif5"
    data-g2-c16t="true"
    data-g2-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: #ffffff;
  background-color: var(--wp-g2-surface-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  position: relative;
  --wp-g2-surface-background-size: 12px;
  --wp-g2-surface-background-size-dotted: 11px;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

<div
  class="components-surface wp-components-surface emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Surface
</div>
`;

exports[`props should render variants 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface wp-components-surface css-icckk4"
+   class="components-surface wp-components-surface css-9yhif5"
    data-g2-c16t="true"
    data-g2-component="Surface"
  >
    Surface
  </div>
`;
